apps/mongodb/overlays/prod/httpd-testing/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: mongodb
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    appname: httpd-deployment
